--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/blueberrycongee/Wuu"
 [dependencies]
 anyhow = "1.0.95"
 clap = { version = "4.5.27", features = ["derive"] }
+serde_cbor = "0.11"
 
 [dev-dependencies]
 pretty_assertions = "1.4.1"
